dselectの場所を変更

--- a/templates/events/update.html
+++ b/templates/events/update.html
@@ -10,8 +10,8 @@
           href="{% static 'accounts/css/suggest.css' %}"/>
     <script src="{% static 'accounts/js/suggest.js' %}"></script>
     <link rel="stylesheet"
-          href="https://unpkg.com/@jarstone/dselect/dist/css/dselect.css"/>
-    <script src="https://unpkg.com/@jarstone/dselect/dist/js/dselect.js"></script>
+          href="{% static 'accounts/css/dselect.css' %}"/>
+    <script src="{% static 'accounts/js/dselect.js' %}"></script>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
