軽微なデザインの変更

--- a/static/style.css
+++ b/static/style.css
@@ -4,3 +4,8 @@ input::-webkit-date-and-time-value {
 span.badge {
     font-size: 0.9rem;
 }
+.btn svg {
+    width: 1em;
+    height: 1em;
+    margin-bottom: 2px;
+}
