表のデザインを調整

--- a/templates/events/participants.html
+++ b/templates/events/participants.html
@@ -19,6 +19,12 @@
         .table>tbody>tr:last-child>td {
             border-bottom: 0;
         }
+
+        tr > td:first-child {
+            width: 1px;
+            white-space: nowrap;
+            padding-right: 1em;
+        }
     </style>
 {% endblock head %}
 {% block breadcrumbs %}
