MITライセンスを表示

--- a/static/accounts/css/dselect.css
+++ b/static/accounts/css/dselect.css
@@ -1,3 +1,9 @@
+/*
+Copyright (C) 2021 jarstone
+Released under the MIT license
+GitHub Repository: https://github.com/jarstone/dselect
+*/
+
 .dselect-wrapper .form-select {
     padding-left: 0.75rem;
     display: flex;
