企画のステータスの変更機能を実装

--- a/templates/events/detail.html
+++ b/templates/events/detail.html
@@ -24,6 +24,29 @@
             width: 1px;
             white-space: nowrap;
         }
+
+        #id_status {
+            --bs-bg-opacity: 1;
+            display: block;
+            width: 100%;
+            padding: .275rem 2.25rem .275rem .75rem;
+            -moz-padding-start: calc(0.75rem - 3px);
+            font-size: 0.9rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #212529;
+            background-color: rgba(var(--bs-light-rgb),var(--bs-bg-opacity)) !important;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+            background-repeat: no-repeat;
+            background-position: right .75rem center;
+            background-size: 16px 12px;
+            border: 0;
+            border-radius: 50px;
+            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
     </style>
 {% endblock head %}
 {% block breadcrumbs %}
@@ -34,7 +57,17 @@
     <h1 class="mb-3 fs-4">{{ event.name }}</h1>
     <div class="mb-3">
         <span class="badge rounded-pill bg-light border border-dark text-dark px-3 py-2 fw-normal">{{ event.type }}</span>
-        <span class="badge rounded-pill bg-light border border-dark text-dark px-3 py-2 fw-normal">{{ event.status }}</span>
+        {% if user in event.admin.all or user.is_staff %}
+            <span class="badge rounded-pill bg-light border border-dark text-dark p-0 fw-normal">
+                <form method="post"
+                      name="change_status">
+                    {% csrf_token %}
+                    {{ form.status }}
+                </form>
+            </span>
+        {% else %}
+            <span class="badge rounded-pill bg-light border border-dark text-dark px-3 py-2 fw-normal">{{ event.status }}</span>
+        {% endif %}
     </div>
     {% if user in event.admin.all or user.is_staff %}
         <a href="{% url 'events:event_update' event.pk %}"
