企画ステータスのバッジを実装

--- a/templates/events/event_list.html
+++ b/templates/events/event_list.html
@@ -5,6 +5,8 @@
 {% load static %}
 
 {% block head %}
+    <link rel="stylesheet"
+          href="{% static 'events/badge.css' %}"/>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
