--- a/templates/events/participants.html
+++ b/templates/events/participants.html
@@ -7,16 +7,7 @@
 
 {% block head %}
     <style>
-        .dot {
-            width: 12px;
-            height: 12px;
-        }
-
-        .rounded-circle {
-            border-radius: 50% !important;
-        }
-
-        .table>tbody>tr:last-child>td {
+        .table > tbody > tr:last-child > td {
             border-bottom: 0;
         }
 
@@ -26,6 +17,8 @@
             padding-right: 1em;
         }
     </style>
+    <link rel="stylesheet"
+          href="{% static 'events/badge.css' %}"/>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
