HTML要素を変更

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         </title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <header class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container container-fluid">
                 <a class="navbar-brand"
                    href="{% url 'home' %}">FairWind Portal</a>
@@ -135,8 +135,8 @@
                     </div>
                 </div>
             </div>
-        </nav>
-        <div class="pt-3 mb-3 border-bottom"
+        </header>
+        <nav class="pt-3 mb-3 border-bottom"
              aria-label="breadcrumb">
             <div class="container">
                 {% block breadcrumbs %}
@@ -145,14 +145,14 @@
                 {% endblock breadcrumbs %}
                 {% render_breadcrumbs 'breadcrumbs.html' %}
             </div>
-        </div>
-        <div class="container mb-3">
+        </nav>
+        <main class="container mb-3">
 
             {% include 'components/messages.html' %}
 
             {% block content %}
             {% endblock content %}
-        </div>
+        </main>
         <!--{% include 'toast.html' %}-->
     </body>
 </html>
