学校関連を schools app に移行

--- a/templates/events/detail.html
+++ b/templates/events/detail.html
@@ -105,7 +105,7 @@
                             <ul class="list-inline mb-0">
                                 {% for school in event.school.all %}
                                     <li class="list-inline-item">
-                                        <a href="{% url 'events:school_detail' school.pk %}">{{ school }}</a>
+                                        <a href="{% url 'schools:school_detail' school.pk %}">{{ school }}</a>
                                     </li>
                                 {% endfor %}
                             </ul>
