--- a/templates/events/school/db_update.html
+++ b/templates/events/school/db_update.html
@@ -9,8 +9,8 @@
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "学校" "events:school_list" %}
-    {% breadcrumb "学校データベース更新" "events:db_update" %}
+    {% breadcrumb "学校" "schools:school_list" %}
+    {% breadcrumb "学校データベース更新" "schools:db_update" %}
 {% endblock breadcrumbs %}
 {% block content %}
     <p>
