--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <a href="{% url 'schools:school_list' %}"
+            <a href="{% url 'schools:' %}"
                class="btn btn-outline-dark d-flex flex-column py-3 mb-3">
                 <div>学校</div>
             </a>
