--- a/templates/schools/db_update.html
+++ b/templates/schools/db_update.html
@@ -1,4 +1,4 @@
-{% extends "events/base.html" %}
+{% extends "schools/base.html" %}
 
 {% load django_bootstrap_breadcrumbs %}
 
@@ -9,7 +9,6 @@
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "学校" "schools:school_list" %}
     {% breadcrumb "学校データベース更新" "schools:db_update" %}
 {% endblock breadcrumbs %}
 {% block content %}
