--- a/templates/events/create.html
+++ b/templates/events/create.html
@@ -7,11 +7,11 @@
 
 {% block head %}
     <link rel="stylesheet"
-          href="{% static 'accounts/css/suggest.css' %}"/>
-    <script src="{% static 'accounts/js/suggest.js' %}"></script>
+          href="{% static 'utils/css/suggest.css' %}"/>
+    <script src="{% static 'utils/js/suggest.js' %}"></script>
     <link rel="stylesheet"
-          href="{% static 'accounts/css/dselect.css' %}"/>
-    <script src="{% static 'accounts/js/dselect.js' %}"></script>
+          href="{% static 'utils/css/dselect.css' %}"/>
+    <script src="{% static 'utils/js/dselect.js' %}"></script>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
