--- a/templates/events/make_invitation.html
+++ b/templates/events/make_invitation.html
@@ -7,8 +7,8 @@
 
 {% block head %}
     <link rel="stylesheet"
-          href="{% static 'accounts/css/suggest.css' %}"/>
-    <script src="{% static 'accounts/js/suggest.js' %}"></script>
+          href="{% static 'utils/css/suggest.css' %}"/>
+    <script src="{% static 'utils/js/suggest.js' %}"></script>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
