学校詳細を学校モデルに統合

--- a/templates/schools/detail_update.html
+++ b/templates/schools/detail_update.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb object.school.name "schools:school_detail" object.school.pk %}
+    {% breadcrumb object.name "schools:school_detail" object.pk %}
     {% breadcrumb "編集" "schools:school_detail_update" %}
 {% endblock breadcrumbs %}
 {% block content %}
