--- a/templates/events/event_list_component.html
+++ b/templates/events/event_list_component.html
@@ -61,7 +61,7 @@
                aria-disabled="true">詳細</a>
             {% for participation in event.participation.all %}
                 {% if participation.participant|stringformat:"s" == user|stringformat:"s" and participation.status|stringformat:"s" == "回答待ち" %}
-                    <a href="{% url 'events:event_reply_my_invitation' event.pk %}"
+                    <a href="{% url 'events:event_reply_invitation' event.pk %}"
                        class="btn btn-warning  btn-sm"
                        tabindex="-1"
                        role="button"
